# cursory

./: .gitattributes  Cargo.toml  LICENSE  README.ko.md  README.md  build.rs
scripts/: release.ps1
src/: app.rs  autostart.rs  browser.rs  confine.rs  domain.rs  draw_rect.rs  hotkey.rs  icon.rs  main.rs  monitor.rs  monitor_preview.rs  settings.rs  single_instance.rs  target.rs  tray.rs
src/app/: about.rs  custom_rect.rs  draw.rs  draw_session.rs  hotkey_recorder.rs  logic.rs  mod.rs  panels.rs  settings_view.rs  style.rs  tray_state.rs  update.rs  update_draw.rs  update_hotkey.rs  view.rs
wix/: main.wxs
