[package]
name = "cursory"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Confine the mouse cursor to a window, monitor, or custom rectangle"
authors = ["HibiCanvas"]
license = "MIT"

[dependencies]
iced = { version = "0.14", default-features = false, features = ["tokio", "advanced", "canvas", "wgpu"] }
global-hotkey = "0.6"
thiserror = "2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_Media",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
]

[build-dependencies]
winresource = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[package.metadata.wix]
eula = false
license = false
